--- a/misc/msvc10/quake3.vcxproj
+++ b/misc/msvc10/quake3.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug TA|Win32">
       <Configuration>Debug TA</Configuration>
@@ -41,34 +41,43 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug TA|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>false</UseOfMfc>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug TA|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>false</UseOfMfc>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>Static</UseOfMfc>
+    <PlatformToolset>v120</PlatformToolset>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>Static</UseOfMfc>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>false</UseOfMfc>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>false</UseOfMfc>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release TA|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>Static</UseOfMfc>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release TA|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>Static</UseOfMfc>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -106,7 +115,7 @@
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Release TA|x64'">..\..\build\quake3_release_ta\</IntDir>
     <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Release TA|Win32'">false</LinkIncremental>
     <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Release TA|x64'">false</LinkIncremental>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\..\build\quake3_debug\</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\..\Bin\Win32\Debug\</OutDir>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\..\build\quake3_debug\</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\..\build\quake3_debug\</IntDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\..\build\quake3_debug\</IntDir>
@@ -280,7 +289,7 @@
       <ResourceOutputFileName>..\winquake.res</ResourceOutputFileName>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>user32.lib;gdi32.lib;advapi32.lib;winmm.lib;psapi.lib;wsock32.lib;ws2_32.lib;dxguid.lib;SDLmain.lib;SDL.lib;OpenGL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>user32.lib;gdi32.lib;advapi32.lib;winmm.lib;psapi.lib;wsock32.lib;ws2_32.lib;dxguid.lib;SDLmain.lib;SDL.lib;OpenGL32.lib;glut32.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <IgnoreSpecificDefaultLibraries>
@@ -295,6 +304,7 @@
       <DataExecutionPrevention>
       </DataExecutionPrevention>
       <TargetMachine>MachineX86</TargetMachine>
+      <AdditionalOptions>/SAFESEH:NO %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Message>Post build processing..</Message>
@@ -403,6 +413,9 @@
       <TargetMachine>MachineX86</TargetMachine>
       <IgnoreSpecificDefaultLibraries>libcmt.lib</IgnoreSpecificDefaultLibraries>
     </Link>
+    <PostBuildEvent>
+      <Command>copy "$(OutDir)$(TargetFileName)" "$(OutDir)..\..\..\Bin\Win32\$(Configuration)"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Midl>
@@ -968,6 +981,36 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="..\..\code\renderercommon\tr_font.c" />
+    <ClCompile Include="..\..\code\renderercommon\tr_image_bmp.c" />
+    <ClCompile Include="..\..\code\renderercommon\tr_image_jpg.c" />
+    <ClCompile Include="..\..\code\renderercommon\tr_image_pcx.c" />
+    <ClCompile Include="..\..\code\renderercommon\tr_image_png.c" />
+    <ClCompile Include="..\..\code\renderercommon\tr_image_tga.c" />
+    <ClCompile Include="..\..\code\renderercommon\tr_noise.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_animation.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_backend.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_bsp.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_cmds.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_curve.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_flares.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_image.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_init.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_light.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_main.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_marks.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_mesh.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_model.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_model_iqm.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_scene.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_shade.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_shader.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_shade_calc.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_shadows.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_sky.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_subs.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_surface.c" />
+    <ClCompile Include="..\..\code\renderergl1\tr_world.c" />
     <ClCompile Include="..\..\code\sys\con_log.c" />
     <ClCompile Include="..\..\code\sys\con_passive.c" />
     <ClCompile Include="..\..\code\qcommon\cvar.c">
@@ -1687,35 +1730,6 @@
     <ClCompile Include="..\..\code\botlib\l_precomp.c" />
     <ClCompile Include="..\..\code\botlib\l_script.c" />
     <ClCompile Include="..\..\code\botlib\l_struct.c" />
-    <ClCompile Include="..\..\code\renderer\tr_animation.c" />
-    <ClCompile Include="..\..\code\renderer\tr_backend.c" />
-    <ClCompile Include="..\..\code\renderer\tr_bsp.c" />
-    <ClCompile Include="..\..\code\renderer\tr_cmds.c" />
-    <ClCompile Include="..\..\code\renderer\tr_curve.c" />
-    <ClCompile Include="..\..\code\renderer\tr_flares.c" />
-    <ClCompile Include="..\..\code\renderer\tr_font.c" />
-    <ClCompile Include="..\..\code\renderer\tr_image.c" />
-    <ClCompile Include="..\..\code\renderer\tr_image_bmp.c" />
-    <ClCompile Include="..\..\code\renderer\tr_image_jpg.c" />
-    <ClCompile Include="..\..\code\renderer\tr_image_pcx.c" />
-    <ClCompile Include="..\..\code\renderer\tr_image_png.c" />
-    <ClCompile Include="..\..\code\renderer\tr_image_tga.c" />
-    <ClCompile Include="..\..\code\renderer\tr_init.c" />
-    <ClCompile Include="..\..\code\renderer\tr_light.c" />
-    <ClCompile Include="..\..\code\renderer\tr_main.c" />
-    <ClCompile Include="..\..\code\renderer\tr_marks.c" />
-    <ClCompile Include="..\..\code\renderer\tr_mesh.c" />
-    <ClCompile Include="..\..\code\renderer\tr_model.c" />
-    <ClCompile Include="..\..\code\renderer\tr_model_iqm.c" />
-    <ClCompile Include="..\..\code\renderer\tr_noise.c" />
-    <ClCompile Include="..\..\code\renderer\tr_scene.c" />
-    <ClCompile Include="..\..\code\renderer\tr_shade.c" />
-    <ClCompile Include="..\..\code\renderer\tr_shade_calc.c" />
-    <ClCompile Include="..\..\code\renderer\tr_shader.c" />
-    <ClCompile Include="..\..\code\renderer\tr_shadows.c" />
-    <ClCompile Include="..\..\code\renderer\tr_sky.c" />
-    <ClCompile Include="..\..\code\renderer\tr_surface.c" />
-    <ClCompile Include="..\..\code\renderer\tr_world.c" />
     <ClCompile Include="..\..\code\libspeex\bits.c" />
     <ClCompile Include="..\..\code\libspeex\buffer.c" />
     <ClCompile Include="..\..\code\libspeex\cb_search.c" />
@@ -1773,6 +1787,7 @@
     <ClInclude Include="..\..\code\qcommon\cm_polylib.h" />
     <ClInclude Include="..\..\code\qcommon\cm_public.h" />
     <ClInclude Include="..\..\code\game\g_public.h" />
+    <ClInclude Include="..\..\code\renderergl1\tr_local.h" />
     <ClInclude Include="..\..\code\ui\keycodes.h" />
     <ClInclude Include="..\..\code\client\keys.h" />
     <ClInclude Include="..\..\code\qcommon\puff.h" />
