--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,25 @@ profile
 !default.mode1v3
 !default.mode2v3
 !default.perspectivev3
+
+# Windows
+####################
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Visual Studio
+####################
+*.suo
+*.user
+*.sln.docstates
+ipch/
+*.aps
+*.ncb
+*.opensdf
+*.sdf
+*.cachefile
+_UpgradeReport_Files/
+Backup*/
+UpgradeLog*.XML
+UpgradeLog*.htm
