Add a block for Visual Studio in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,30 @@ profile
 !default.mode1v3
 !default.mode2v3
 !default.perspectivev3
+
+# Visual Studio
+####################
+*.obj
+*.exe
+*.pdb
+*.user
+*.aps
+*.pch
+*.vspscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.cache
+*.ilk
+*.log
+[Bb]in
+[Dd]ebug*/
+*.lib
+*.sbr
+obj/
+[Rr]elease*/
+_ReSharper*/
