Fix docker image name to ghcr.io registry

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,7 +14,7 @@ on:
   pull_request:
 
 env:
-  DOCKER_IMAGE: ondronr/ioq3server
+  DOCKER_IMAGE: ghcr.io/ondronr/ioq3server
 
 jobs:
   # Run tests.
