--- a/code/client/CMakeLists.txt
+++ b/code/client/CMakeLists.txt
@@ -92,7 +92,7 @@ add_asm(${PROJECT_NAME})
 add_botlib(${PROJECT_NAME})
 add_dependencies(${PROJECT_NAME} baseq3-cgame baseq3-qagame baseq3-ui missionpack-cgame missionpack-qagame missionpack-ui ${RENDERER_LIST})
 set(CLIENT_DEFINES)
-set(LIBS opusfile opus vorbis zlib openal ${SDL2_LIBRARIES} ${CMAKE_DL_LIBS})
+set(LIBS opusfile opus vorbis zlib openal libSDL2 ${CMAKE_DL_LIBS})
 if (MSVC)
 	list(APPEND LIBS ws2_32 winmm psapi gdi32 ole32)
 elseif (APPLE)
@@ -109,7 +109,6 @@ else()
 endif()
 list(APPEND LIBS curl)
 target_link_libraries(${PROJECT_NAME} ${LIBS})
-target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIRS})
 if (USE_VOIP)
 	list(APPEND CLIENT_DEFINES USE_VOIP)
 endif()
