--- a/misc/osx/application.plist.in
+++ b/misc/osx/application.plist.in
@@ -4,18 +4,22 @@
 <dict>
   <key>CFBundleDevelopmentRegion</key>
   <string>en-US</string>
+  <key>CFBundleGetInfoString</key>
+  <string>${MACOSX_BUNDLE_INFO_STRING}</string>
   <key>CFBundleExecutable</key>
   <string>${MACOSX_BUNDLE_EXECUTABLE_NAME}</string>
   <key>CFBundleIdentifier</key>
-  <string>@CMAKE_PROJECT_NAME@.@_EXE_TARGET@</string>
+  <string>${MACOSX_BUNDLE_GUI_IDENTIFIER}</string>
   <key>CFBundleInfoDictionaryVersion</key>
   <string>6.0</string>
   <key>CFBundleIconFile</key>
-  <string>@APPICON@</string>
+  <string>${MACOSX_BUNDLE_ICON_FILE}</string>
   <key>CFBundleName</key>
-  <string>@_EXE_TARGET@</string>
+  <string>${MACOSX_BUNDLE_EXECUTABLE_NAME}</string>
   <key>CFBundlePackageType</key>
   <string>APPL</string>
+  <key>NSHumanReadableCopyright</key>
+  <string>${MACOSX_BUNDLE_COPYRIGHT}</string>
   <key>NSHighResolutionCapable</key>
   <true/>
   <key>NSRequiresAquaSystemAppearance</key>
