Allow web client to use unzipped QVMs
Compile the QVMs and automatically uses them when not using --preload-file.

--- a/code/web/baseq3/ioq3-config.json
+++ b/code/web/baseq3/ioq3-config.json
@@ -8,6 +8,9 @@
         {"src": "baseq3/pak5.pk3", "dst": "/baseq3"},
         {"src": "baseq3/pak6.pk3", "dst": "/baseq3"},
         {"src": "baseq3/pak7.pk3", "dst": "/baseq3"},
-        {"src": "baseq3/pak8.pk3", "dst": "/baseq3"}
+        {"src": "baseq3/pak8.pk3", "dst": "/baseq3"},
+        {"src": "baseq3/vm/cgame.qvm", "dst": "/baseq3/vm"},
+        {"src": "baseq3/vm/qagame.qvm", "dst": "/baseq3/vm"},
+        {"src": "baseq3/vm/ui.qvm", "dst": "/baseq3/vm"}
     ]
 }
