Replace usage of cURL with Mongoose

--- a/misc/nsis/Makefile
+++ b/misc/nsis/Makefile
@@ -19,8 +19,8 @@ endif
 ifndef USE_OPENAL_DLOPEN
 USE_OPENAL_DLOPEN=1
 endif
-ifndef USE_CURL_DLOPEN
-USE_CURL_DLOPEN=0
+ifndef USE_MONGOOSE
+USE_MONGOOSE=1
 endif
 ifndef USE_INTERNAL_ZLIB
 USE_INTERNAL_ZLIB=1
@@ -50,8 +50,8 @@ endif
 ifeq ($(USE_OPENAL_DLOPEN),1)
 	DEFINES+= -DUSE_OPENAL_DLOPEN
 endif
-ifeq ($(USE_CURL_DLOPEN),1)
-	DEFINES+= -DUSE_CURL_DLOPEN
+ifeq ($(USE_MONGOOSE),1)
+	DEFINES+= -DUSE_MONGOOSE
 endif
 ifeq ($(USE_INTERNAL_ZLIB),1)
 	DEFINES+= -DUSE_INTERNAL_ZLIB
